# query-generator

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  report_on_functions.typ
.fossil-settings/: ignore-glob
data/generated_histograms/JOB/: regrouped_job_hist.csv  regrouped_job_hist.parquet
data/generated_histograms/TPCDS/: histogram.parquet
data/histograms/: histogram_job.parquet  histogram_tpcds.parquet  histogram_tpch.parquet  raw_tpcds_hist.csv
docs/: home.md
docs/dbms/: duckdb.md
docs/design_docs/: llm-post-fix.md
docs/endpoints/: extension_and_ollama.md  extensions_batch.md  extensions_online.md  extensions_with_ollama.md  filter.md  fix_transform.md  generate_db.md  generated_db.md  get_metrics.md  histogram.md  synthetic_generation.md
docs/endpoints/figures/: pipeline.pikchr
docs/extensions/: new_engine.md
docs/miscellaneous/: data_structure.md
docs/query_generation/: pipeline.md
params_config/add_limit/: llm_fixed_queries.toml
params_config/complex_queries/: tpcds.toml  tpcds_dev.toml  tpcds_devstral.toml  tpcds_gemma.toml  tpcds_llama4.toml  tpcds_qwen.toml
params_config/extension_and_ollama/: tpcds_dev.toml  tpcds_llama4.toml
params_config/extensions_and_llms/: tpcds_deepseek_stats.toml  tpcds_dev.toml  tpcds_devstral.toml  tpcds_gemma.toml  tpcds_llama4.toml  tpcds_llama4_group_by.toml  tpcds_llama4_group_by_schema.toml  tpcds_llama4_stats.toml  tpcds_qwen.toml
params_config/extensions_batch/: tpcds_dev.toml  tpcds_dev_bedrock.toml
params_config/extensions_online/: tpcds_batch_openai.toml  tpcds_dev.toml  tpcds_dev_bedrock.toml  tpcds_dev_openai.toml  tpcds_dev_openai_flex.toml  tpcds_llama4.toml  tpcds_pyspark.toml  tpcds_pyspark_dev.toml  tpch_dev.toml
params_config/extensions_with_anyllm/: bedrock_qwen3.toml  tpcds_dev.toml
params_config/extensions_with_ollama/: tpcds_batch_openai.toml  tpcds_dev.toml  tpcds_llama4.toml  tpch_dev.toml
params_config/filter/: filter_tpcds.toml  filter_tpcds_dev.toml  filter_tpcds_pyspark_dev.toml  filter_tpch_dev.toml
params_config/filter_synthetic/: filter_job.toml
params_config/fix_transform/: tpcds.toml  tpcds_dev.toml  tpcds_ollama.toml  tpcds_ollama_dev.toml  tpch_dev.toml  tpch_ollama_dev.toml
params_config/functions/: duckdb_functions.toml  minimal_example.toml  spark_functions.toml  standard_sql_functions.toml
params_config/generate_db/: tpcds.toml  tpcds_dev.toml  tpcds_empty.toml  tpcds_spark_dev.toml  tpcds_test.toml  tpch_dev.toml
params_config/get_metrics/: ollama_tpcds.toml  ollama_tpcds_dev.toml
params_config/histogram/: tpcds.toml  tpcds_dev.toml  tpch_dev.toml
params_config/llm_fix/: tpcds_dev.toml  tpcds_llm1.toml  tpcds_llm1_devstral.toml  tpcds_llm1_devstral_revised.toml  tpcds_llm1_llama.toml
params_config/make_histograms/: tpcds_dev.toml
params_config/prompts/: basic_prompt.toml  spark_prompt.toml  standard_prompt.toml
params_config/schemas/: dev.txt  tpcds.txt  tpcds_spark.txt
params_config/search_params/: job.toml  job_dev.toml  tpcds.toml  tpcds_dev.toml
params_config/snowflake/: tpcds.toml
params_config/synthetic_generation/: job.toml  job_dev.toml  tpcds.toml  tpcds_dev.toml  tpcds_pyspark_dev.toml  tpch_dev.toml
params_config/synthetic_queries/: job.toml  job_dev.toml  tpcds.toml  tpcds_dev.toml
src/query_generator/: logger.py  main.py
src/query_generator/data_structures/: foreign_key_graph.py
src/query_generator/database_connection/: duckdb_validation.py  factory.py  pyspark_validation.py  query_validator_abc.py
src/query_generator/database_schemas/: job.py  schemas.py  tpcds.py  tpch.py
src/query_generator/duckdb/: binning.py  setup.py
src/query_generator/duckdb_connection/: binning.py  histogram.py  query_validation.py  setup.py  trace_collection.py  utils.py
src/query_generator/extensions/: add_limit.py  batch_llm_extension.py  fix_transform.py  llm_clients.py  llm_extension.py  ollama_extension.py  union_queries.py
src/query_generator/filter/: cherry_pick_binning.py  filter.py
src/query_generator/join_based_query_generator/: snowflake.py
src/query_generator/join_based_query_generator/utils/: query_writer.py  subgraph_generator.py
src/query_generator/llm/: complex_queries.py  llm_extension.py  llm_fix.py  utils.py
src/query_generator/metrics/: canonical_join.py  duckdb_parser.py  function_classifier.py  get_metrics.py  plot_histograms.py
src/query_generator/predicate_generator/: histogram.py  predicate_generator.py
src/query_generator/synthetic_queries/: predicate_generator.py  query_builder.py  snowflake.py  synthetic_query_generator.py
src/query_generator/synthetic_queries/utils/: query_writer.py  subgraph_generator.py
src/query_generator/tools/: cherry_pick_binning.py  format_histogram.py  format_queries_file_structure.py  histograms.py  union_queries.py
src/query_generator/utils/: definitions.py  exceptions.py  file_writing.py  params.py  show_messages.py  toml_examples.py  utils.py
tests/: test_basic.py  utils.py
tests/command_line/: example_tomls.py  test_example_tomls.py
tests/documentation/: test_toml.py
tests/duckdb/: test_binning.py  test_duckdb_setup.py  test_duckdb_utils.py
tests/file_management/: test_read_histograms.py
tests/fix_transform/: test_fix_transform.py
tests/histograms/: test_common_substrings.py
tests/integration/: conftest.py  test_duckdb_functions.py  test_pyspark_validator.py  test_spark_functions.py
tests/llm/: test_batch_llm_extension.py  test_bedrock_batch_client.py  test_llm_clients.py  test_llm_extension.py  test_openai_client.py  test_parsing.py
tests/metrics/: test_canonical_join.py  test_function_classifier.py  test_plot_histograms.py
tests/query_generation/: test_make_queries.py  test_predicate_tree.py  test_synthetic_queries.py
tests/union/: test_union.py
