[project]
name = "query-generator"
version = "0.2.0"
requires-python = ">= 3.11"
dependencies = ["ollama>=0.5.1,<0.6", "anthropic[bedrock]>=0.85.0,<1"]

[project.scripts]
main = "query_generator.main:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyrefly"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pixi.pypi-dependencies]
query_generator = { path = ".", editable = true }

[tool.pixi.target.linux-64.pypi-dependencies]
commonstrings = { url = "https://github.com/Matematikoi/commonstrings/releases/download/v1.5/commonstrings-1.4-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }

[tool.pixi.target.osx-arm64.pypi-dependencies]
commonstrings = { url = "https://github.com/Matematikoi/commonstrings/releases/download/v1.5/commonstrings-1.4-cp313-cp313-macosx_11_0_arm64.whl" }

[tool.pixi.dependencies]
typer = ">=0.15.2,<0.16"
rich  = ">=14.0.0,<15"
pypika = ">=0.48.9,<0.49"
numpy = ">=2.2.5,<3"
duckdb = ">=1.4.0,<2"
polars = ">=1.27.1,<2"
tqdm = "*"
cattrs = ">=24.1.2,<25"
toml = ">=0.10.2,<0.11"
types-toml = ">=0.10.8.20240310,<0.11"
sqlglot = ">=28.0.0"
attrs = ">=25.4.0,<26"
sqlparse = ">=0.5.4,<0.6"
networkx = ">=3.6.1,<4"
matplotlib = ">=3.10.8,<4"
seaborn = ">=0.13.2,<0.14"
pyarrow = ">=22.0.0,<23"
openai = ">=2.26.0,<3"
pyspark = ">=4.1.1,<5"
openjdk = ">=17,<18"


[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3.5,<9"
ruff = ">=0.11.7,<0.12"
ipython = ">=9.1.0,<10"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev    = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
#lint = "ruff format src/"
main = "python src/query_generator/main.py"
commit = { cmd = "fossil commit", depends-on = ["lint", "test"]}

[tool.pixi.feature.dev.tasks]
format = "ruff format src tests"
check = "ruff check --fix src"
typing = "pyrefly check src"
lint = {depends-on = ["format","check","typing"]}
test = "pytest"
test-integration = "pytest -m integration"

[tool.ruff]
line-length = 80
indent-width = 2
# indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "C4",   # flake8-comprehensions
    "Q",    # flake8-quotes
    "NPY",  # Numpy rules
    "PD",   # Pandas rules
    "PERF", # Perflint
    "FBT",  # Boolean trap
    "COM",  # Commas rules
    "UP",   # Newer python features
    "INP",  # Implicit namespace package (__init__.py)
    "TRY",  # Try and except rules
    "EM",   # Exception messages
    "PL",   # Pylint rules
    "N",    # Naming conventions
    "RET",  # Return rules
    "TD",   # TODO rules
    # "PTH",  # use-pathlib rules
]
ignore = ["COM812"]


[tool.pyrefly]
replace_imports_with_any = ["commonstrings"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = [ "tests" ]
markers = [
  "integration: requires external database (run with pixi run test-integration)",
]
addopts = "-m 'not integration'"

[tool.ruff.lint.per-file-ignores]
# Too many arguments
"src/query_generator/main.py" = ["PLR0913"]
